@@ -112,6 +112,7 @@ class CMFCatalogAwareTests(unittest.TestCase, LogInterceptor):
 
     def tearDown(self):
         self._ignore_log_errors()
+        self._ignore_log_errors(subsystem='CMFCore.CMFCatalogAware')
 
     def test_indexObject(self):
         foo = self.site.foo
@@ -193,7 +194,7 @@ class CMFCatalogAwareTests(unittest.TestCase, LogInterceptor):
 
     def test_reindexObjectSecurity_missing_noraise(self):
         # Raising disabled
-        self._catch_log_errors()
+        self._catch_log_errors(subsystem='CMFCore.CMFCatalogAware')
         foo = self.site.foo
         missing = TheClass('missing').__of__(foo)
         missing.GETOBJECT_RAISES = False
@@ -207,7 +208,7 @@ class CMFCatalogAwareTests(unittest.TestCase, LogInterceptor):
 
     def test_reindexObjectSecurity_missing_oldbrain(self):
         # Missing object is swallowed by old Zope brains
-        self._catch_log_errors()
+        self._catch_log_errors(subsystem='CMFCore.CMFCatalogAware')
         self.site.portal_catalog.brain_class = DummyOldBrain
         foo = self.site.foo
         missing = TheClass('missing').__of__(foo)
