@@ -56,6 +56,7 @@ class FSSecurityBase( RequestTest, FSDVTest, LogInterceptor ):
         RequestTest.tearDown(self)
         FSDVTest.tearDown(self)
         self._ignore_log_errors()
+        self._ignore_log_errors(subsystem='CMFCore.DirectoryView')
 
 
 class FSSecurityTests( FSSecurityBase, LogInterceptor ):
@@ -69,8 +70,8 @@ class FSSecurityTests( FSSecurityBase, LogInterceptor ):
         self._checkSettings(self.ob.fake_skin.test4,'Access contents information',0,[])
 
     def test_invalidPermissionNames( self ):
-        import zLOG
-        self._catch_log_errors(zLOG.ERROR)
+        import logging
+        self._catch_log_errors(logging.ERROR,subsystem='CMFCore.DirectoryView')
         # Test for an invalid permission name
         # baseline
         self._checkSettings(self.ob.fake_skin.test5,'View',1,[])
